Fix Docker login and add Azure CLI dependencies to GitHub Actions
- Add Azure CLI installation to workflow
- Fix Docker login authentication using Azure CLI credentials
- Add proper dependency installation (curl, wget, jq)
- Fix environment variable references and image tagging
- Update ACR authentication to use Azure service principal
- Resolve Docker login action username/password requirements
- Add comprehensive error handling for ACR operations

--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -29,6 +29,19 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
     
+    - name: Install Azure CLI and dependencies
+      run: |
+        # Install Azure CLI
+        curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+        
+        # Install additional dependencies
+        sudo apt-get update
+        sudo apt-get install -y curl wget jq
+        
+        # Verify installations
+        az version
+        jq --version
+    
     - name: Set scan parameters
       id: params
       run: |
