--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -22,8 +22,9 @@ jobs:
     runs-on: ubuntu-latest
     
     outputs:
-      image-tag: ${{ steps.meta.outputs.tags }}
-      image-digest: ${{ steps.build.outputs.digest }}
+      image-tag: ${{ steps.meta.outputs.image-tag }}
+      build-id: ${{ steps.meta.outputs.build-id }}
+      acr-server: ${{ steps.meta.outputs.acr-server }}
       
     steps:
     - name: Checkout code
@@ -31,16 +32,42 @@ jobs:
       with:
         fetch-depth: 0
     
+    - name: Install Azure CLI
+      run: |
+        curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+        az version
+    
+    - name: Install additional dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y \
+          curl \
+          wget \
+          jq \
+          unzip \
+          apt-transport-https \
+          ca-certificates \
+          gnupg \
+          lsb-release
+    
     - name: Generate build ID and metadata
       id: meta
       run: |
         BUILD_ID="${GITHUB_SHA::8}-$(date +%s)"
-        IMAGE_TAG="${{ env.AZURE_CONTAINER_REGISTRY }}/${{ env.IMAGE_NAME }}:${BUILD_ID}"
-        LATEST_TAG="${{ env.AZURE_CONTAINER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest"
+        ACR_LOGIN_SERVER="${{ secrets.REGISTRY_LOGIN_SERVER }}"
+        IMAGE_TAG="${ACR_LOGIN_SERVER}/webgoat-core:${BUILD_ID}"
+        LATEST_TAG="${ACR_LOGIN_SERVER}/webgoat-core:latest"
         
         echo "build-id=${BUILD_ID}" >> $GITHUB_OUTPUT
-        echo "tags=${IMAGE_TAG}" >> $GITHUB_OUTPUT
+        echo "image-tag=${IMAGE_TAG}" >> $GITHUB_OUTPUT
         echo "latest-tag=${LATEST_TAG}" >> $GITHUB_OUTPUT
+        echo "acr-server=${ACR_LOGIN_SERVER}" >> $GITHUB_OUTPUT
+        
+        # Set as environment variables for the entire job
+        echo "BUILD_ID=${BUILD_ID}" >> $GITHUB_ENV
+        echo "ACR_LOGIN_SERVER=${ACR_LOGIN_SERVER}" >> $GITHUB_ENV
+        echo "IMAGE_TAG=${IMAGE_TAG}" >> $GITHUB_ENV
+        echo "LATEST_TAG=${LATEST_TAG}" >> $GITHUB_ENV
         
         echo "Build ID: ${BUILD_ID}"
         echo "Image Tag: ${IMAGE_TAG}"
@@ -50,12 +77,45 @@ jobs:
       with:
         platforms: linux/amd64
     
+    - name: Azure Login for ACR access
+      uses: azure/login@v1
+      with:
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+    
+    - name: Get ACR login credentials
+      run: |
+        # Get ACR credentials using Azure CLI
+        ACR_LOGIN_SERVER="${{ secrets.REGISTRY_LOGIN_SERVER }}"
+        ACR_REGISTRY_NAME=$(echo $ACR_LOGIN_SERVER | cut -d'.' -f1)
+        
+        echo "Getting credentials for ACR: $ACR_REGISTRY_NAME"
+        
+        # Get ACR credentials
+        ACR_USERNAME=$(az acr credential show --name $ACR_REGISTRY_NAME --query username -o tsv)
+        ACR_PASSWORD=$(az acr credential show --name $ACR_REGISTRY_NAME --query passwords[0].value -o tsv)
+        
+        # Set as environment variables for subsequent steps
+        echo "ACR_USERNAME=$ACR_USERNAME" >> $GITHUB_ENV
+        echo "ACR_PASSWORD=$ACR_PASSWORD" >> $GITHUB_ENV
+        echo "ACR_LOGIN_SERVER=$ACR_LOGIN_SERVER" >> $GITHUB_ENV
+        
+        # Verify credentials were obtained
+        if [ -z "$ACR_USERNAME" ] || [ -z "$ACR_PASSWORD" ]; then
+          echo "Failed to get ACR credentials"
+          exit 1
+        fi
+        
+        echo "Successfully obtained ACR credentials"
+    
     - name: Log in to Azure Container Registry
       uses: docker/login-action@v3
       with:
-        registry: ${{ secrets.REGISTRY_LOGIN_SERVER }}
-        username: ${{ secrets.REGISTRY_USERNAME }}
-        password: ${{ secrets.REGISTRY_PASSWORD }}
+        registry: ${{ env.ACR_LOGIN_SERVER }}
+        username: ${{ env.ACR_USERNAME }}
+        password: ${{ env.ACR_PASSWORD }}
     
     - name: Build Docker image
       id: build
@@ -67,8 +127,8 @@ jobs:
         push: false
         load: true
         tags: |
-          ${{ steps.meta.outputs.tags }}
-          ${{ steps.meta.outputs.latest-tag }}
+          ${{ env.IMAGE_TAG }}
+          ${{ env.LATEST_TAG }}
         build-args: |
           DOTNET_VERSION=5.0.17
           ASPNET_VERSION=5.0.17
@@ -91,7 +151,7 @@ jobs:
     - name: Run Trivy vulnerability scanner (Table format)
       run: |
         echo "## 🔍 Trivy Security Scan Results (Table Format)" >> $GITHUB_STEP_SUMMARY
-        echo "Scanning image: ${{ steps.meta.outputs.tags }}" >> $GITHUB_STEP_SUMMARY
+        echo "Scanning image: ${{ env.IMAGE_TAG }}" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
         echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
         
@@ -100,7 +160,7 @@ jobs:
           --severity CRITICAL,HIGH \
           --ignore-unfixed \
           --no-progress \
-          ${{ steps.meta.outputs.tags }} | tee trivy-results-table.txt
+          ${{ env.IMAGE_TAG }} | tee trivy-results-table.txt
         
         cat trivy-results-table.txt >> $GITHUB_STEP_SUMMARY
         echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
@@ -108,7 +168,7 @@ jobs:
     - name: Run Trivy vulnerability scanner (SARIF format)
       uses: aquasecurity/trivy-action@0.28.0
       with:
-        image-ref: ${{ steps.meta.outputs.tags }}
+        image-ref: ${{ env.IMAGE_TAG }}
         format: sarif
         output: trivy-results.sarif
         severity: CRITICAL,HIGH
@@ -133,7 +193,7 @@ jobs:
           --ignore-unfixed \
           --exit-code 1 \
           --no-progress \
-          ${{ steps.meta.outputs.tags }} > trivy-results.json
+          ${{ env.IMAGE_TAG }} > trivy-results.json
         
         # Check if any vulnerabilities were found
         CRITICAL_COUNT=$(cat trivy-results.json | jq '[.Results[]?.Vulnerabilities[]? | select(.Severity=="CRITICAL")] | length')
@@ -155,8 +215,8 @@ jobs:
         cat > security-report.md << 'EOF'
         # 🔒 Security Scan Report
         
-        **Image:** ${{ steps.meta.outputs.tags }}
-        **Build ID:** ${{ steps.meta.outputs.build-id }}
+        **Image:** ${{ env.IMAGE_TAG }}
+        **Build ID:** ${{ env.BUILD_ID }}
         **Scan Date:** $(date -u)
         **Branch:** ${{ github.ref_name }}
         **Commit:** ${{ github.sha }}
@@ -190,7 +250,7 @@ jobs:
       uses: actions/upload-artifact@v4
       if: always()
       with:
-        name: security-scan-results-${{ steps.meta.outputs.build-id }}
+        name: security-scan-results-${{ env.BUILD_ID }}
         path: |
           trivy-results.sarif
           trivy-results.json
@@ -202,11 +262,11 @@ jobs:
       if: success()
       run: |
         echo "Pushing image to Azure Container Registry..."
-        docker push ${{ steps.meta.outputs.tags }}
-        docker push ${{ steps.meta.outputs.latest-tag }}
+        docker push ${{ env.IMAGE_TAG }}
+        docker push ${{ env.LATEST_TAG }}
         
         echo "✅ Image pushed successfully!" >> $GITHUB_STEP_SUMMARY
-        echo "**Image:** ${{ steps.meta.outputs.tags }}" >> $GITHUB_STEP_SUMMARY
+        echo "**Image:** ${{ env.IMAGE_TAG }}" >> $GITHUB_STEP_SUMMARY
 
   deploy:
     name: Deploy to AKS
@@ -241,6 +301,9 @@ jobs:
           --resource-group ${{ secrets.AKS_RESOURCE_GROUP }} \
           --name ${{ secrets.AKS_CLUSTER_NAME }} \
           --overwrite-existing
+        
+        # Set environment variables for subsequent steps
+        echo "ACR_LOGIN_SERVER=${{ secrets.REGISTRY_LOGIN_SERVER }}" >> $GITHUB_ENV
         
         # Verify connection
         kubectl cluster-info
@@ -278,10 +341,16 @@ jobs:
     
     - name: Update deployment image
       run: |
-        # Update the deployment YAML with the new image tag
-        sed -i "s|image: dotnet:latest|image: ${{ needs.build.outputs.image-tag }}|g" k8s/deployment.yaml
+        # Get the full image path from build job outputs
+        FULL_IMAGE_TAG="${{ needs.build.outputs.acr-server }}/webgoat-core:${{ needs.build.outputs.build-id }}"
         
-        echo "Updated deployment image to: ${{ needs.build.outputs.image-tag }}"
+        # Update the deployment YAML with the new image tag
+        sed -i "s|image: dotnet:latest|image: ${FULL_IMAGE_TAG}|g" k8s/deployment.yaml
+        
+        echo "Updated deployment image to: ${FULL_IMAGE_TAG}"
+        
+        # Verify the change
+        grep "image:" k8s/deployment.yaml
     
     - name: Deploy application
       id: deploy
@@ -306,7 +375,7 @@ jobs:
         
         echo "✅ Application deployed successfully!" >> $GITHUB_STEP_SUMMARY
         echo "**Service IP:** ${SERVICE_IP}" >> $GITHUB_STEP_SUMMARY
-        echo "**Image:** ${{ needs.build.outputs.image-tag }}" >> $GITHUB_STEP_SUMMARY
+        echo "**Image:** ${{ needs.build.outputs.acr-server }}/webgoat-core:${{ needs.build.outputs.build-id }}" >> $GITHUB_STEP_SUMMARY
     
     - name: Run deployment health checks
       run: |
@@ -350,7 +419,7 @@ jobs:
         
         **Environment:** ${{ github.ref == 'refs/heads/main' && 'Production' || 'Development' }}
         **Namespace:** ${{ env.NAMESPACE }}
-        **Image:** ${{ needs.build.outputs.image-tag }}
+        **Image:** ${{ needs.build.outputs.acr-server }}/webgoat-core:${{ needs.build.outputs.build-id }}
         **Deployment Date:** $(date -u)
         **Branch:** ${{ github.ref_name }}
         **Commit:** ${{ github.sha }}
@@ -383,7 +452,7 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Environment:** ${{ github.ref == 'refs/heads/main' && 'Production' || 'Development' }}" >> $GITHUB_STEP_SUMMARY
           echo "**Namespace:** ${{ env.NAMESPACE }}" >> $GITHUB_STEP_SUMMARY
-          echo "**Image:** ${{ needs.build.outputs.image-tag }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Image:** ${{ needs.build.outputs.acr-server }}/webgoat-core:${{ needs.build.outputs.build-id }}" >> $GITHUB_STEP_SUMMARY
         else
           echo "## ❌ Deployment Failed" >> $GITHUB_STEP_SUMMARY
           echo "There was an issue with the deployment. Please check the logs above." >> $GITHUB_STEP_SUMMARY
