Fix Kubernetes deployment configuration
- Update container image placeholder with proper substitution
- Fix health check endpoints to match HealthController routes (/health/live, /health/ready, /health/startup)
- Remove service account requirement to avoid RBAC issues
- Replace deprecated AppArmor annotation with proper appArmorProfile
- Increase startup probe failure threshold to 30 for container startup time
- Update workflow sed command to match new image placeholder

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -344,7 +344,7 @@ jobs:
         FULL_IMAGE_TAG="${{ needs.build.outputs.acr-server }}/webgoat-core:${{ needs.build.outputs.build-id }}"
         
         # Update the deployment YAML with the new image tag
-        sed -i "s|image: dotnet:latest|image: ${FULL_IMAGE_TAG}|g" k8s/deployment.yaml
+        sed -i "s|\${ACR_LOGIN_SERVER}/webgoat-core:\${IMAGE_TAG}|${FULL_IMAGE_TAG}|g" k8s/deployment.yaml
         
         echo "Updated deployment image to: ${FULL_IMAGE_TAG}"
         
