Optimize deployment for successful container startup
MAJOR PROGRESS: Containers now starting successfully!
- Image pull:  Successfully pulled
- Container creation:  Created
- Container startup:  Started
- 1/3 pods ready (vs previous 0/3)

OPTIMIZATIONS:
- Clean up replica sets in addition to deployments to avoid cached configs
- Increase pod termination timeout to 180s for proper cleanup
- Reduce rollout timeout to 300s since containers start quickly
- Maintain single replica for consistent debugging

Next: Allow more time for health checks to complete startup process.

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -409,7 +409,11 @@ jobs:
           kubectl delete deployment ${{ env.DEPLOYMENT_NAME }} -n ${{ env.NAMESPACE }}
           # Wait for pods to be terminated
           echo "Waiting for pods to terminate..."
-          kubectl wait --for=delete pods -l app=dotnet-app -n ${{ env.NAMESPACE }} --timeout=120s || true
+          kubectl wait --for=delete pods -l app=dotnet-app -n ${{ env.NAMESPACE }} --timeout=180s || true
+          
+          # Also clean up replica sets to avoid conflicts
+          echo "Cleaning up replica sets..."
+          kubectl delete replicasets -l app=dotnet-app -n ${{ env.NAMESPACE }} || true
         fi
         
         # Apply deployment and service
@@ -422,7 +426,7 @@ jobs:
         
         # Wait for rollout to complete with error handling
         echo "Waiting for deployment rollout..."
-        if ! kubectl rollout status deployment/${{ env.DEPLOYMENT_NAME }} -n ${{ env.NAMESPACE }} --timeout=600s; then
+        if ! kubectl rollout status deployment/${{ env.DEPLOYMENT_NAME }} -n ${{ env.NAMESPACE }} --timeout=300s; then
           echo "❌ Deployment rollout failed or timed out!"
           echo "Gathering diagnostic information..."
           
