Fix health check timeouts - increase from 5s to 10s
EXCELLENT PROGRESS: 2/3 pods now Ready and all containers running successfully!

FINAL FIX:
- Increase startup probe timeout: 5s -> 10s (for .NET startup time)
- Increase readiness probe timeout: 3s -> 10s (for .NET response time)

Health check failures are due to timeout, not application issues.
.NET applications need more time to respond to HTTP health checks.

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -109,7 +109,7 @@ spec:
             scheme: HTTP
           initialDelaySeconds: 45  # Increased for debugging
           periodSeconds: 5
-          timeoutSeconds: 3
+          timeoutSeconds: 10  # Increased timeout for .NET responses
           successThreshold: 1
           failureThreshold: 3
         
@@ -120,7 +120,7 @@ spec:
             scheme: HTTP
           initialDelaySeconds: 30  # Increased for debugging
           periodSeconds: 10
-          timeoutSeconds: 5
+          timeoutSeconds: 10  # Increased timeout for .NET startup
           successThreshold: 1
           failureThreshold: 30
         
