--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -90,39 +90,39 @@ spec:
             cpu: "500m"
             ephemeral-storage: "2Gi"
         
-        # Health checks - temporarily commented for debugging
-        # livenessProbe:
-        #   httpGet:
-        #     path: /health/live
-        #     port: http
-        #     scheme: HTTP
-        #   initialDelaySeconds: 60  # Increased for debugging
-        #   periodSeconds: 10
-        #   timeoutSeconds: 5
-        #   successThreshold: 1
-        #   failureThreshold: 3
-        # 
-        # readinessProbe:
-        #   httpGet:
-        #     path: /health/ready
-        #     port: http
-        #     scheme: HTTP
-        #   initialDelaySeconds: 45  # Increased for debugging
-        #   periodSeconds: 5
-        #   timeoutSeconds: 10  # Increased timeout for .NET responses
-        #   successThreshold: 1
-        #   failureThreshold: 3
-        # 
-        # startupProbe:
-        #   httpGet:
-        #     path: /health/startup
-        #     port: http
-        #     scheme: HTTP
-        #   initialDelaySeconds: 30  # Increased for debugging
-        #   periodSeconds: 10
-        #   timeoutSeconds: 10  # Increased timeout for .NET startup
-        #   successThreshold: 1
-        #   failureThreshold: 30
+        # Health checks - conservative settings after confirming app works
+        livenessProbe:
+          httpGet:
+            path: /health/live
+            port: http
+            scheme: HTTP
+          initialDelaySeconds: 120  # Very conservative - app is proven to work
+          periodSeconds: 30
+          timeoutSeconds: 15
+          successThreshold: 1
+          failureThreshold: 5
+        
+        readinessProbe:
+          httpGet:
+            path: /health/ready
+            port: http
+            scheme: HTTP
+          initialDelaySeconds: 90  # Conservative after app starts
+          periodSeconds: 15
+          timeoutSeconds: 15
+          successThreshold: 1
+          failureThreshold: 3
+        
+        startupProbe:
+          httpGet:
+            path: /health/startup
+            port: http
+            scheme: HTTP
+          initialDelaySeconds: 60  # Give app time to start
+          periodSeconds: 15
+          timeoutSeconds: 15
+          successThreshold: 1
+          failureThreshold: 10
         
         # Volume mounts for writable directories
         volumeMounts:
