Update workflow timing to match optimized health checks
- Updated messaging: health checks now need 20-30 seconds instead of 2-3 minutes
- Reduced initial sleep: 60s  45s for faster pipeline completion
- Reflects actual optimized probe timings in deployment.yaml

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -494,10 +494,10 @@ jobs:
       run: |
         echo "Running post-deployment health checks..."
         
-        # Wait for health checks to complete their initial delays
+        # Wait for health checks to complete their initial delays (now much faster!)
         echo "Waiting for application startup and health check initialization..."
-        echo "⏳ Startup probes need 2 minutes, readiness probes need 2.5 minutes"
-        sleep 60
+        echo "⏳ Startup probes need 20 seconds, readiness probes need 30 seconds"
+        sleep 45
         
         # Function to check pod readiness with multiple attempts
         check_pods_ready() {
